argus 2.0-BETA: add dali-examples to API docs fix remaining invalid xtypes